Fix chat commands page spacing to add whitespace.

--- a/main.css
+++ b/main.css
@@ -133,44 +133,6 @@ button {
     width: 100%;
 }
 
-@media (min-width: 1500px) {
-    .container {
-        display: grid;
-        grid-template-columns: repeat(2, 1fr);
-        grid-auto-rows: minmax(100px, auto);
-        gap: 0px;
-        padding: 5em;
-    }
-
-    section {
-        flex-direction: column;
-    }
-
-    .blurb-container {
-        grid-row: 2;
-    }
-    
-    .blurb{
-        grid-row: 2;
-        grid-column: 2;
-    }
-
-    .header-image {
-        max-width: 50vw;
-        grid-row:2;
-        grid-column: 1 / 2;
-
-        margin-right: 1em;
-        border-radius: 10px;
-        border-top-right-radius: 50px;
-
-    }
-
-    .card {
-        width: 100%;
-    }
-}
-
 .title {
     padding: 1em;
     grid-row: 1;
@@ -259,4 +221,48 @@ li a {
 
 .command {
     color: rgb(0, 206, 206);
+}
+
+@media (min-width: 1500px) {
+    .container {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-auto-rows: minmax(100px, auto);
+        gap: 0px;
+        padding: 5em;
+        justify-items: center;
+    }
+
+    section {
+        flex-direction: column;
+    }
+
+    .blurb-container {
+        grid-row: 2;
+    }
+    
+    .blurb{
+        grid-row: 2;
+        grid-column: 2;
+    }
+
+    .header-image {
+        max-width: 50vw;
+        grid-row:2;
+        grid-column: 1 / 2;
+
+        margin-right: 1em;
+        border-radius: 10px;
+        border-top-right-radius: 50px;
+
+    }
+
+    .card {
+        width: 100%;
+    }
+
+    .commands-blurb-container {
+        width: 100%;
+        max-width: 70vw;
+    }
 }
